# pelican-gemini

./: LICENSE  README.md  pyproject.toml
pelican_gemini/: __init__.py  _content.py  _reader.py
